# diplom_django

./:  README.md  Dockerfile  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
documents/documents/: test1
main/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: models.py  serializers.py  urls.py  views.py
